import all latest components + format

--- a/src/common/index.html
+++ b/src/common/index.html
@@ -1,106 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Creative</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="images/icons8-star-100.png" />
-  </head>
-  <body>
-    <style>
-      #appId {
-        position: absolute;
-        outline: 3px dashed black;
-        width: 80%;
-        aspect-ratio: 16 / 9;
-        overflow: hidden;
-        padding: 0;
-        margin-top: 50px;
-        margin-left: 10%;
-      }
-      #videoId {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-    <script>
-      setTimeout(() => {
-        console.log('setTimeout');
-        const ad = window.getVPAIDAd();
-        const slot = document.getElementById('appId');
-        const videoSlot = document.getElementById('videoId');
-        const width = 12;
-        const height = 12;
-        const viewMode = 'viewMode';
-        const desiredBitrate = 'desiredBitrate';
-        const creativeData = {};
-        const environmentVars = { slot, videoSlot };
-        ad.handshakeVersion('');
-        ad.initAd(width, height, viewMode, desiredBitrate, creativeData, environmentVars);
-        // TODO: should we explicitly subscribe to these events?
-        [
-          { event: 'AdImpression', value: 0 },
-          { event: 'AdVideoStart', value: 0 },
-          { event: 'AdVideoFirstQuartile', value: 25 },
-          { event: 'AdVideoMidpoint', value: 50 },
-          { event: 'AdVideoThirdQuartile', value: 75 },
-          { event: 'AdVideoComplete', value: 100 }
-        ].forEach(({ event }) => ad.subscribe(() => console.log(`video quartile event: ${event}`), event));
-        ad.startAd();
-      }, 1000);
-    </script>
+	<head>
+		<title>Creative</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="shortcut icon"
+			type="image/png"
+			href="images/icons8-star-100.png"
+		/>
+	</head>
+	<body>
+		<style>
+			#appId {
+				position: absolute;
+				outline: 3px dashed black;
+				width: 80%;
+				aspect-ratio: 16 / 9;
+				overflow: hidden;
+				padding: 0;
+				margin-top: 50px;
+				margin-left: 10%;
+			}
+			#videoId {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+			}
+		</style>
+		<script>
+			setTimeout(() => {
+				console.log("setTimeout");
+				const ad = window.getVPAIDAd();
+				const slot = document.getElementById("appId");
+				const videoSlot = document.getElementById("videoId");
+				const width = 12;
+				const height = 12;
+				const viewMode = "viewMode";
+				const desiredBitrate = "desiredBitrate";
+				const creativeData = {};
+				const environmentVars = { slot, videoSlot };
+				ad.handshakeVersion("");
+				ad.initAd(
+					width,
+					height,
+					viewMode,
+					desiredBitrate,
+					creativeData,
+					environmentVars
+				);
+				// TODO: should we explicitly subscribe to these events?
+				[
+					{ event: "AdImpression", value: 0 },
+					{ event: "AdVideoStart", value: 0 },
+					{ event: "AdVideoFirstQuartile", value: 25 },
+					{ event: "AdVideoMidpoint", value: 50 },
+					{ event: "AdVideoThirdQuartile", value: 75 },
+					{ event: "AdVideoComplete", value: 100 },
+				].forEach(({ event }) =>
+					ad.subscribe(
+						() => console.log(`video quartile event: ${event}`),
+						event
+					)
+				);
+				ad.startAd();
+			}, 1000);
+		</script>
 
-    <svg
-      id="dce-svg-26b54f1"
-      data-run="paused"
-      class="dce-svg-distortion"
-      xmlns="http://www.w3.org/2000/svg"
-      width="100%"
-      height="100%"
-      viewBox="0 0 600 600"
-      style="content-visibility: hidden"
-    >
-      <defs>
-        <filter
-          id="distortion-filter-26b54f1"
-          x="0"
-          y="0"
-          width="100%"
-          height="100%"
-          filterUnits="objectBoundingBox"
-          primitiveUnits="userSpaceOnUse"
-          color-interpolation-filters="sRGB"
-        >
-          <feimage
-            xlink:href="images/ripple512.png"
-            id="displacement-image"
-            x="-8%"
-            y="-8%"
-            width="74%"
-            height="74%"
-            preserveAspectRatio="xMidYMid slice"
-            result="distortionImage"
-          ></feimage>
-          <fedisplacementmap
-            id="displacement-map"
-            xChannelSelector="R"
-            yChannelSelector="G"
-            in="SourceGraphic"
-            in2="distortionImage"
-            result="displacementMap"
-            color-interpolation-filters="sRGB"
-            scale="219"
-          ></fedisplacementmap>
-          <fecomposite operator="in" in2="distortionImage"></fecomposite>
-        </filter>
-      </defs>
-    </svg>
+		<svg
+			id="dce-svg-26b54f1"
+			data-run="paused"
+			class="dce-svg-distortion"
+			xmlns="http://www.w3.org/2000/svg"
+			width="100%"
+			height="100%"
+			viewBox="0 0 600 600"
+			style="content-visibility: hidden"
+		>
+			<defs>
+				<filter
+					id="distortion-filter-26b54f1"
+					x="0"
+					y="0"
+					width="100%"
+					height="100%"
+					filterUnits="objectBoundingBox"
+					primitiveUnits="userSpaceOnUse"
+					color-interpolation-filters="sRGB"
+				>
+					<feimage
+						xlink:href="images/ripple512.png"
+						id="displacement-image"
+						x="-8%"
+						y="-8%"
+						width="74%"
+						height="74%"
+						preserveAspectRatio="xMidYMid slice"
+						result="distortionImage"
+					></feimage>
+					<fedisplacementmap
+						id="displacement-map"
+						xChannelSelector="R"
+						yChannelSelector="G"
+						in="SourceGraphic"
+						in2="distortionImage"
+						result="displacementMap"
+						color-interpolation-filters="sRGB"
+						scale="219"
+					></fedisplacementmap>
+					<fecomposite
+						operator="in"
+						in2="distortionImage"
+					></fecomposite>
+				</filter>
+			</defs>
+		</svg>
 
-    <div id="appId">
-      <video muted controls id="videoId">
-        <source src="https://statics.dmcdn.net/d/vpaid/split/assets/video_mid.mp4" type="video/mp4" />
-      </video>
-    </div>
-  </body>
+		<div id="appId">
+			<video muted controls id="videoId">
+				<source
+					src="https://statics.dmcdn.net/d/vpaid/split/assets/video_mid.mp4"
+					type="video/mp4"
+				/>
+			</video>
+		</div>
+	</body>
 </html>
