onitsuka fine-tuning + autoplay fix + cuber up-to-date

--- a/src/common/index.html
+++ b/src/common/index.html
@@ -127,10 +127,7 @@
 
 		<div id="appId">
 			<video muted controls id="videoId">
-				<source
-					src="https://statics.dmcdn.net/d/vpaid/split/assets/video_mid.mp4"
-					type="video/mp4"
-				/>
+				<source src="" type="video/mp4" />
 			</video>
 		</div>
 	</body>
