--- a/src/common/index.html
+++ b/src/common/index.html
@@ -12,15 +12,19 @@
 	</head>
 	<body>
 		<style>
+			body {
+				margin: 0;
+				height: 100vh;
+				background: linear-gradient(#00685f, #000000);
+			}
 			#appId {
 				position: absolute;
 				outline: 3px dashed black;
-				width: 80%;
+				width: 100%;
 				aspect-ratio: 16 / 9;
 				overflow: hidden;
 				padding: 0;
 				margin-top: 50px;
-				margin-left: 10%;
 			}
 			#videoId {
 				position: absolute;
@@ -75,55 +79,6 @@
 				ad.startAd();
 			}, 1000);
 		</script>
-
-		<svg
-			id="dce-svg-26b54f1"
-			data-run="paused"
-			class="dce-svg-distortion"
-			xmlns="http://www.w3.org/2000/svg"
-			width="100%"
-			height="100%"
-			viewBox="0 0 600 600"
-			style="content-visibility: hidden"
-		>
-			<defs>
-				<filter
-					id="distortion-filter-26b54f1"
-					x="0"
-					y="0"
-					width="100%"
-					height="100%"
-					filterUnits="objectBoundingBox"
-					primitiveUnits="userSpaceOnUse"
-					color-interpolation-filters="sRGB"
-				>
-					<feimage
-						xlink:href="images/ripple512.png"
-						id="displacement-image"
-						x="-8%"
-						y="-8%"
-						width="74%"
-						height="74%"
-						preserveAspectRatio="xMidYMid slice"
-						result="distortionImage"
-					></feimage>
-					<fedisplacementmap
-						id="displacement-map"
-						xChannelSelector="R"
-						yChannelSelector="G"
-						in="SourceGraphic"
-						in2="distortionImage"
-						result="displacementMap"
-						color-interpolation-filters="sRGB"
-						scale="219"
-					></fedisplacementmap>
-					<fecomposite
-						operator="in"
-						in2="distortionImage"
-					></fecomposite>
-				</filter>
-			</defs>
-		</svg>
 
 		<div id="appId">
 			<video muted controls id="videoId">
