expose pauseAd() and resumeAd() to creative + volume event fix + collapse event fix

--- a/src/common/index.html
+++ b/src/common/index.html
@@ -41,8 +41,8 @@
 				const videoSlot = document.getElementById("videoId");
 				const width = 12;
 				const height = 12;
-				const viewMode = "viewMode";
-				const desiredBitrate = "desiredBitrate";
+				const viewMode = "normal"; // normal, thumbnail, fullscreen
+				const desiredBitrate = Infinity;
 				const creativeData = {};
 				const environmentVars = { slot, videoSlot };
 				ad.handshakeVersion("");
