spanish scratch version done

--- a/src/common/index.html
+++ b/src/common/index.html
@@ -84,10 +84,8 @@
 				//////////////////////////////////////
 				const playBtn = document.getElementById("playBtn-id");
 				const muteBtn = document.getElementById("muteBtn-id");
-				const fullscreenBtn =
-					document.getElementById("fullscreenBtn-id");
-				const remainingTimeElt =
-					document.getElementById("remainingTime-id");
+				const fullscreenBtn = document.getElementById("fullscreenBtn-id");
+				const remainingTimeElt = document.getElementById("remainingTime-id");
 				const progressBar = document.getElementById("progress-bar-id");
 
 				playBtn.innerHTML = "⏸️";
