--- a/src/common/index.html
+++ b/src/common/index.html
@@ -4,11 +4,7 @@
 		<title>Creative</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link
-			rel="shortcut icon"
-			type="image/png"
-			href="images/icons8-star-100.png"
-		/>
+		<link rel="shortcut icon" type="image/png" href="images/chart.png" />
 	</head>
 	<body>
 		<style>
@@ -84,8 +80,10 @@
 				//////////////////////////////////////
 				const playBtn = document.getElementById("playBtn-id");
 				const muteBtn = document.getElementById("muteBtn-id");
-				const fullscreenBtn = document.getElementById("fullscreenBtn-id");
-				const remainingTimeElt = document.getElementById("remainingTime-id");
+				const fullscreenBtn =
+					document.getElementById("fullscreenBtn-id");
+				const remainingTimeElt =
+					document.getElementById("remainingTime-id");
 				const progressBar = document.getElementById("progress-bar-id");
 
 				playBtn.innerHTML = "⏸️";
